[package]
name = "SDL-Test"
version = "0.1.0"
edition = "2024"

[dependencies]
sdl3 = { version = "0.17.3", features = ["build-from-source"] }
glow = "0.16.0"
glam = "0.32.0"
bytemuck = { version = "1.25.0", features = ["derive"] }

rand = { version = "0.10.0" }

tracing = { version = "0.1.44" }
tracing-subscriber = "0.3.22"
